refactoring petadmin and petform validations

--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -17872,6 +17872,17 @@ video {
   border-radius: 1rem;
 }
 
+.photo {
+  width: 22rem;
+  height: 12rem;
+  border-radius: 1rem;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+    0 2px 4px -1px rgba(0, 0, 0, 0.06);
+}
+
 @media (min-width: 640px) {
   .sm\:space-y-0 > :not(template) ~ :not(template) {
     --space-y-reverse: 0;
