--- a/src/css/tailwind.src.css
+++ b/src/css/tailwind.src.css
@@ -8,3 +8,13 @@
 .rounded-xl {
   border-radius: 1rem;
 }
+.photo {
+  width: 22rem;
+  height: 12rem;
+  border-radius: 1rem;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+    0 2px 4px -1px rgba(0, 0, 0, 0.06);
+}
