--- a/src/css/tailwind.src.css
+++ b/src/css/tailwind.src.css
@@ -8,6 +8,13 @@
 .rounded-xl {
   border-radius: 1rem;
 }
+
+.cardPhoto{
+  width: 24rem;
+  height: 17rem;
+  
+}
+
 .photo {
   width: 22rem;
   height: 12rem;
