--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -17864,6 +17864,26 @@ video {
   transition-delay: 1000ms;
 }
 
+.bg-orange {
+  background-color: #f4ca36;
+}
+
+.bg-yellow {
+  background-color: #f5d358;
+}
+
+.top-1 {
+  top: 1rem;
+}
+
+.bg-red {
+  background-color: #e16c40;
+}
+
+.text-link {
+  color: #e16c40;
+}
+
 .w-70 {
   width: 20rem;
 }
@@ -17872,7 +17892,7 @@ video {
   border-radius: 1rem;
 }
 
-.cardPhoto{
+.cardPhoto {
   width: 24rem;
   height: 17rem;
 }
